--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
 		"php" : ">=5.3.0",
     		"composer/installers" : ">=1.0",
     		"silverstripe/framework" : ">=3.0",
-    		"silverstripe/cms" : ">=3.0",
-    		"picqer/exact-php-client" : "*"
+    		"silverstripe/cms" : "~3.2",
+    		"picqer/exact-php-client" : "dev-master"
 	},
 	"extra": {
 		"installer-name": "exact-client"
